--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <div class="bg-surface-color">
+    <nav class="container">
+        <a href="#" id="logo">
+            <img src="assets/Perfil de viagens (Community)/icons/Logo.svg" alt="Logo Marca">
+        </a>
+
+        <ul id="primary menu"> 
+            <li>
+                <a href="#">
+                    <img  class="imageLupa" src="assets/Perfil de viagens (Community)/icons/MagnifyingGlass.svg" alt="Icone de Lupa">
+                </a>
+            </li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="#">Minhas viagens</a></li>
+            <li><a href="#">
+                <img src="assets/Perfil de viagens (Community)/icons/Profile pic.png" alt="Imagem de perfil de Isabela Torres">
+            </a>
+        </li>
+        </ul>
+    </nav>
+    </div>
+    <header>
+    </header>
 </body>
 </html>
