--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="bg-surface-color">
     <nav class="container">
         <a href="#" id="logo">
-            <img src="assets/Perfil de viagens (Community)/icons/Logo.svg" alt="Logo Marca">
+            <img class="imageLogo" src="assets/Perfil de viagens (Community)/icons/Logo.svg" alt="Logo Marca">
         </a>
 
         <ul id="primary menu"> 
@@ -28,8 +28,37 @@
         </li>
         </ul>
     </nav>
-    </div>
     <header>
+        <div class="container-header">  
+            <div id="Profile">
+                <img src="assets/Perfil de viagens (Community)/icons/Profile pic.png" alt="Imagem de Isabela Torres">
+                <div>
+                    <h1>Isabela Torres</h1>
+                    <br>
+                    <p>Amante de viagens, cultura e gastronomia. 🌍✈️ <br> 
+                        Aqui compartilho as histórias registradas em cada  
+                        clique, explorando cantinhos fascinantes do nosso 
+                        planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
+                </div>
+                <br>
+            </div>
+
+        </div>
+        <ul id="info">
+        <li>
+            <img src="assets/Perfil de viagens (Community)/icons/MapPin.svg" alt="Icone de mapa">
+            <span>São Paulo, Brazil</span>
+        </li>
+        <li>
+            <img src="assets/Perfil de viagens (Community)/icons/AirplaneTilt.svg" alt="Icone de Avião">
+            <span>37 países</span>
+        </li>
+        <li>
+            <img src="assets/Perfil de viagens (Community)/icons/Image.svg" alt="Icone de Imagem">
+            <span>240 fotos</span>
+        </li>
+        </ul>
     </header>
+    </div>
 </body>
 </html>
