--- a/index.html
+++ b/index.html
@@ -60,5 +60,19 @@
         </ul>
     </header>
     </div>
+    <main class="container">
+        <img src="assets/Perfil de viagens (Community)/images/Image 01.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 02.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 03.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 04.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 05.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 06.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 07.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 08.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 09.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 10.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 11.png" alt="...">
+        <img src="assets/Perfil de viagens (Community)/images/Image 12.png" alt="...">
+    </main>
 </body>
 </html>
