--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div class="bg-surface-color">
+
+
     <nav class="container">
         <a href="#" id="logo">
             <img class="imageLogo" src="assets/Perfil de viagens (Community)/icons/Logo.svg" alt="Logo Marca">
@@ -20,17 +22,22 @@
                     <img  class="imageLupa" src="assets/Perfil de viagens (Community)/icons/MagnifyingGlass.svg" alt="Icone de Lupa">
                 </a>
             </li>
-            <li><a href="#">Explorer</a></li>
-            <li><a href="#">Minhas viagens</a></li>
+            <div class="mobile">
+                <li><a href="#">Explorer</a></li>
+                <li><a href="#">Minhas viagens</a></li>
+            </div>
+
             <li><a href="#">
                 <img src="assets/Perfil de viagens (Community)/icons/Profile pic.png" alt="Imagem de perfil de Isabela Torres">
             </a>
         </li>
         </ul>
     </nav>
+
+
     <header>
         <div class="container-header">  
-            <div id="Profile">
+            <div id="profile">
                 <img src="assets/Perfil de viagens (Community)/icons/Profile pic.png" alt="Imagem de Isabela Torres">
                 <div>
                     <h1>Isabela Torres</h1>
@@ -59,6 +66,8 @@
         </li>
         </ul>
     </header>
+
+
     </div>
     <main class="container">
         <img src="assets/Perfil de viagens (Community)/images/Image 01.png" alt="...">
@@ -75,15 +84,18 @@
         <img src="assets/Perfil de viagens (Community)/images/Image 12.png" alt="...">
     </main>
     <footer class="container">
-        <span>
-            Travelgram &copy; 2024
-        </span>
-        <span>
-            Termos de uso
-        </span>
-        <span>
-            Politica de privacidade
-        </span>
+    
+            <span id="footer">
+                Travelgram &copy; 2024
+            </span>
+        <div class="mobile-footer">
+            <span>
+                Termos de uso
+            </span>
+            <span>
+                Politica de privacidade
+            </span>
+        </div>
     </footer>
 </body>
 </html>
